css part worked

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,186 +1,34 @@
-body {
-    font-family: SFProDisplay-Regular, Helvetica, Arial, sans-serif;
-    overflow-y: scroll; 
+
+.body{
+    font-family: 'Poppins', sans-serif;
 }
 
-hr {
-    background-color: #dddfe2;
-    opacity: 1;
-    margin-top: 0;
-    margin-bottom: 5px;
-}
-
-/* Bootstrap Class */
-.container {
-    max-width: 1000px;
-}
-
-.form-control {
-    border: 1px solid #dddfe2;
-    color: #1d2129;
-    font-size: 17px;
-    line-height: 16px;
-    padding: 14px 16px;
-    vertical-align: middle;
-    margin-bottom: 12px;
-}
-
-.form-control:focus {
-    border-color: #1877f2;
-    box-shadow: 0 0 0 2px #e7f3ff;
-}
-
-.form-control:focus::placeholder {
-    color: #ddd;
-}
-
-.btn {
-    border: none;
-    border-radius: 6px;
-    font-size: 20px;
-    line-height: 48px;
-    padding: 0 16px;
-    font-weight: bold;
-}
-
-.btn-primary {
-    background-color: #1877f2;
-}
-
-.btn-success {
-    background-color: #42b72a;
-    border-color: #42b72a;
-}
-
-.btn-success:hover {
-    background-color: #36a420;
-    border-color: #36a420;
-}
- 
-
-/*  Content */
-.content {
-    background-color: #f0f2f5 ;
-    height: 72vh;
-    min-height: 720px;
-    padding-top: 134px;
-    padding-bottom: 114px;
-}
-
-p.description {
-    font-size: 28px;
-    font-weight: normal;
-    line-height: 32px;
-    max-width: 500px;
-}
-
-.logo {
-    display: inline-block;
-    padding: 70px 0 20px;
-}
-
-.logo__img {
-    height: 106px;
-    margin: -28px;
-}
-
-.content p.create-page {
-    color: #1c1e21;
-    font-size: 14px;
-    font-weight: normal;
-    padding: 27px;
-}
-
-/*  Form  */
-
-.form {
+.logo{
     align-items: center;
-    background-color: #fff;
-    border: none;
-    border-radius: 8px;
-    box-shadow: 0 2px 54px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
-    box-sizing: border-box;
-    margin: 0 0 0 auto;
-    padding: 16px 16px 24px;
-    max-width: 398px;
+    font-weight: 700;
 }
 
-.form__content {
-    color: #1c1e21;
-    font-size: 12px;
-    line-height: 1.34;
-    margin: auto;
-    padding: 0; 
+.all{
+    margin-top: 100px;
 }
 
-.form__text {
-    color: #1877f2;
-    font-size: 14px;
-    font-weight: 500px;
-    text-align: center;
-}
+.box {
+    padding-top: 15px;
+    border-radius: 10px;
+    box-shadow: 3px 5px 5px rgba(0, 0, 0, 0.1), 3px 5px 5px rgba(0, 0, 0, 0.1);
+  }
 
-.line { 
-    border-bottom: 1px solid #dadde1;
-    display: flex;
-    margin: 20px 0; 
-}
-
-.form__newAccount {
-    font-size: 17px !important;
-}
-
-/*  Footer  */
-
-footer {
-    background-color: #fff;
-}
-
-footer ul {
-    padding-left: 0;
-    margin-bottom: 5px;
-}
-
-footer ul li {
-    display: inline-block;
-    list-style-type: none;
-}
-
-footer ul:first-of-type li {
-    padding-right: 10px;
-}
-
-footer ul:nth-of-type(2) li {
-    padding-right: 14px;
-}
-
-footer ul li a,
-footer p {
-    color: #8a8d91;
-    font-size: 12px;
-    line-height: 1.34;
-    cursor: pointer;
+.box a{
     text-decoration: none;
+    color: black;
 }
 
-@media screen and (max-width: 992px) {
-    /*  Content */
-    .content { 
-        padding-top: 0; 
-        text-align: center;
-    }
-
-    .logo { 
-        padding: 35px 0 20px;
-    }
-
-    p.description  {
-        margin: 15px auto 50px;
-        font-size: 20px;
-    }
-
-    .form {
-        margin: auto;
-    }
-
+.bottom{
+    margin-top: 300px;
+    background-color: white;
+}
+  
+.bottom a{
+    color: #7f8185 ;
+    text-decoration: none;
 }
